# sketch-to-story-pipeline

./: .env.example  .gitignore  ADVANCED.md  ARCHITECTURE.md  COLAB_README.md  CONTRIBUTORS.md  EXAONE_GGUF_SETUP.md  Makefile  README.md  SETUP.md  USAGE.md  a_to_e_3b_full_package_manifest_20260603.txt  common.py  dashboard.py  evaluate.py  evaluation_dashboard.py  experiment_a.py  generators.py  kim_gihong_vision.py  kim_jeongseok_common.py  kim_jeongseok_run.py  kim_jeongseok_story_experiments.py  kim_jeongseok_story_runtime.py  park_jeongwoo_dashboard.py  park_jeongwoo_experiment_a.py  park_jeongwoo_pipeline.py  pipeline.py  pipeline_a.py  pyproject.toml  requirements-colab.txt  requirements-cuda.txt  requirements.txt  run.py  run_experiments_cd_qwen3b.py  setup.bat  setup.sh  setup_windows.ps1  sketch_to_story_colab.ipynb  story_experiments.py  story_runtime.py  (+2 more)
docs/: ADVANCED.md
experiment_a/: README.md  evaluate.py  generators.py  pipeline_a.py  requirements.txt  utils.py  vision.py
inputs/: README.md
inputs/1. 토끼와 거북이/: caption.txt
inputs/2. 여우와 두루미/: caption.txt
inputs/3. 개미와 베짱이/: caption.txt
inputs/4. 금도끼 은도끼/: caption.txt
inputs/5. 해와 달이 된 오누이/: caption.txt
inputs/6. 은혜 갚은 까치/: caption.txt
inputs/7. 새로운 이야기/: caption.txt
outputs/: all_run_summary.json
outputs/A/: 10_experiment_a.json  1_experiment_a.json  2_experiment_a.json  3_experiment_a.json  5_experiment_a.json  6_experiment_a.json  8_experiment_a.json  9_experiment_a.json  experiment_a_result.json
outputs/B/: failure.json  sequence_story.txt
storypipe/: __init__.py  __main__.py
(+171 files in other folders)
